plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.2'
    id 'io.spring.dependency-management' version '1.1.2'
}

allprojects{
    apply plugin : 'java'
    apply plugin : 'eclipse'
    apply plugin : 'idea'
    apply plugin : 'org.springframework.boot'
    apply plugin : 'io.spring.dependency-management'
    apply plugin : 'java-library'
    apply from: "${rootDir}/dependencies.gradle"
}
subprojects{
    group 'com.vky'
    version 'v.0.1'
    sourceCompatibility = JavaVersion.VERSION_18
    targetCompatibility = JavaVersion.VERSION_18
    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
    }
}

allprojects{
    repositories {
        mavenCentral()
    }

    buildscript {
        repositories {
            mavenCentral()
        }
    }

    dependencies {
        implementation libs.springBoot
        implementation libs.springBootWeb
        implementation libs.springBootActuator
        implementation libs.springBootValidation
        developmentOnly libs.springBootDevtools
        implementation libs.mapstruct
        annotationProcessor libs.mapstructProcessor
        annotationProcessor libs.lombokMapstructBinding
        implementation libs.lombok
        annotationProcessor libs.lombok
        implementation libs.openApi
        implementation libs.springOpenFeign
        implementation libs.javaJWT

    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}